fixed config syncing